--- a/CIT-APP/app/src/main/res/layout/activity_instruction.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_instruction.xml
@@ -45,11 +45,13 @@
     <TextView
         android:id="@+id/exerciseInstruction"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Instruction"
-        android:textSize="30sp"
+        android:layout_height="210dp"
         android:autoSizeTextType="uniform"
+        android:text="Instruction"
         android:textColor="#000000"
+        android:textSize="20sp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/startExercise"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/exerciseDescription" />
