--- a/CIT-APP/app/src/main/res/layout/activity_login_info_screen.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_login_info_screen.xml
@@ -6,22 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".other_activities.LoginInfoScreen">
 
-    <Button
-        android:id="@+id/startLogin"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/startExercise"
-        android:textSize="20sp"
-        android:background="@color/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/startLogin"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,18 +26,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autoSizeTextType="uniform"
-                android:textSize="40sp"
                 android:gravity="center"
-                android:text="Information" />
+                android:text="Information"
+                android:textSize="40sp" />
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
                 android:autoSizeTextType="uniform"
-                android:layout_height="match_parent"
+                android:gravity="center"
                 android:text="@string/LoginScreenInformation"
+                android:textSize="19sp" />
+
+            <Button
+                android:id="@+id/startLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:background="@color/colorPrimaryDark"
+                android:text="@string/startExercise"
                 android:textSize="20sp" />
         </LinearLayout>
     </ScrollView>
