--- a/CIT-APP/app/src/main/res/layout/activity_results_per_year.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_results_per_year.xml
@@ -12,18 +12,35 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="60dp"
         android:background="@drawable/background"
-        app:layout_constraintBottom_toTopOf="@+id/home_button"
+        app:layout_constraintBottom_toTopOf="@+id/linlayout"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <Button
-        android:id="@+id/home_button"
+    <LinearLayout
+        android:id="@+id/linlayout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:text="@string/home"
-        android:autoSizeTextType="uniform"
+        android:orientation="horizontal"
         android:background="@drawable/yellow_background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <Button
+            android:id="@+id/home_button"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:autoSizeTextType="uniform"
+            android:layout_weight="0.1"
+            android:background="@android:color/transparent"
+            android:text="@string/home" />
+
+        <ImageView
+            android:id="@+id/homeImage"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:src="@drawable/home"
+            android:layout_marginRight="20dp"
+            android:background="@android:color/transparent"
+            android:layout_weight="0.6"
+            android:text="@string/save" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
