--- a/CIT-APP/app/src/main/res/layout/activity_syllable_repetition.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_syllable_repetition.xml
@@ -60,7 +60,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/syllable"
         android:layout_width="266dp"
         android:layout_height="57dp"
         android:gravity="center"
