--- a/CIT-APP/app/src/main/res/layout/activity_settings.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_settings.xml
@@ -55,12 +55,13 @@
                 android:id="@+id/button_restart_session"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                android:layout_marginLeft="20dp"
                 android:layout_gravity="center"
                 android:layout_weight="0.7"
                 android:autoSizeTextType="uniform"
                 android:background="@android:color/transparent"
                 android:text="@string/restartSession"
-                android:textSize="20sp" />
+                android:textSize="15sp" />
 
             <ImageView
                 android:id="@+id/help"
