[mod] fixed a lot of bugs. This version is potentially finished and ready to be submitted.

--- a/CIT-APP/app/src/main/res/layout/activity_profile.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_profile.xml
@@ -240,7 +240,6 @@
                             android:id="@+id/rbCochlearImplant"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:autoSizeTextType="uniform"
                             android:layout_weight="0.3"
                             android:text="@string/cochlearImplant" />
 
@@ -248,7 +247,6 @@
                             android:id="@+id/rbHearingAid"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:autoSizeTextType="uniform"
                             android:layout_weight="0.3"
                             android:text="@string/hearingAid" />
 
@@ -256,7 +254,6 @@
                             android:id="@+id/rbBothCI"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:autoSizeTextType="uniform"
                             android:layout_weight="0.2"
                             android:text="@string/both" />
 
@@ -264,7 +261,6 @@
                             android:id="@+id/rbNoneCI"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:autoSizeTextType="uniform"
                             android:layout_weight="0.2"
                             android:text="@string/none" />
                     </RadioGroup>
@@ -328,7 +324,7 @@
                             android:text="@string/both" />
 
                         <RadioButton
-                            android:id="@+id/rbNoneCI"
+                            android:id="@+id/rbNoSide"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.5"
