--- a/CIT-APP/app/src/main/res/layout/activity_reading_of_sentences.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_reading_of_sentences.xml
@@ -23,11 +23,12 @@
         android:id="@+id/sentences"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:gravity="center"
         android:layout_marginTop="100dp"
+        android:gravity="center"
+        android:text="TextView"
         android:textColor="#000000"
         android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/recordSentence"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -36,11 +37,11 @@
         android:id="@+id/recordSentence"
         android:layout_width="300dp"
         android:layout_height="100dp"
+        android:layout_marginBottom="50dp"
         app:cardCornerRadius="50dp"
-        android:layout_marginTop="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sentences">
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
