--- a/CIT-APP/app/src/main/res/layout/minimal_pairs_finished_element.xml
+++ b/CIT-APP/app/src/main/res/layout/minimal_pairs_finished_element.xml
@@ -32,8 +32,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:textStyle="bold"
-            android:autoSizeTextType="uniform"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_weight="1"
             android:text="TextView" />
 
@@ -44,8 +43,7 @@
             android:gravity="center"
             android:textStyle="bold"
             android:layout_gravity="center"
-            android:autoSizeTextType="uniform"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_weight="1"
             android:text="TextView" />
 
