--- a/CIT-APP/app/src/main/res/layout/popup_daily_results.xml
+++ b/CIT-APP/app/src/main/res/layout/popup_daily_results.xml
@@ -1,31 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="350dp"
-    android:background="@drawable/yellow_background"
-    android:padding="5dp"
-    android:layout_gravity="center">
 
-    <TextView
-        android:id="@+id/close"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:text="X"
-        android:background="@drawable/circle_background"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        android:layout_gravity="end"
-        android:gravity="center"/>
-    <TextView
-        android:id="@+id/resultsMessage"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/textLayout"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:textColor="#000000"
-        android:text="text"
-        android:autoSizeTextType="uniform"/>
+        android:background="@drawable/yellow_background"
+        android:orientation="vertical"
+        android:padding="5dp">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/close"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:text="X"
+            android:background="@drawable/circle_background"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:layout_gravity="end"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/resultsMessage"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_gravity="top"
+            android:autoSizeTextType="uniform"
+            android:gravity="center"
+            android:text="text"
+            android:textColor="#000000" />
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/gaussianDist"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:background="@drawable/background"
+            android:layout_gravity="bottom" />
+
+    </LinearLayout>
