--- a/CIT-APP/app/src/main/res/layout/activity_picture__description.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_picture__description.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".exercises.Picture_Description">
+    tools:context=".exercises.PictureDescription">
 
     <TextView
         android:id="@+id/textView8"
