--- a/CIT-APP/app/src/main/res/layout/activity_word__list.xml
+++ b/CIT-APP/app/src/main/res/layout/activity_word__list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".exercises.Word_List">
+    tools:context=".exercises.WordList">
 
     <TextView
         android:id="@+id/textView8"
